tests/ui/consts/required-consts/collect-in-dead-fnptr.opt.stderr
error[E0080]: evaluation of `Fail::<i32>::C` failed
  --> $DIR/collect-in-dead-fnptr.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation panicked: explicit panic
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/collect-in-dead-fnptr.rs:18:17
   |
LL |         let _ = Fail::<T>::C;
   |                 ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn not_called::<i32>`
  --> $DIR/collect-in-dead-fnptr.rs:27:28
   |
LL |         let _fnptr: fn() = not_called::<T>;
   |                            ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
